<resources>
    <string name="app_name">微阳</string>
    <string name="title_home">主页</string>
    <string name="title_notice">通知</string>
    <string name="title_my">我的</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="loginTitle">登录</string>
    <string name="registerTitle">注册</string>
    <string name="newsAccount">新用户？点击这里注册</string>
    <string name="haveAccount">已有账号了？点击这里登录</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_student_id">请输入学号</string>
    <string name="input_school">请输入学校</string>
    <string name="input_student_class">请输入班级</string>
    <string name="input_student_department">请输入系别</string>
    <string name="input_sex">请输入性别</string>

    <string name="jiangzuo">讲座</string>
    <string name="yanchu">演出</string>
    <string name="bisai">比赛</string>
    <string name="shetuan">社团</string>
    <string name="xueshenghui">学生会</string>

    <string name="verify_title">研发中心招新宣讲会</string>
    <string name="verify_time">2017-5-8 19:00</string>
    <string name="verify_place">实训大楼学术报告厅</string>
    <string name="publish_default_text">发表于</string>
    <string name="verify_publish_time">2017-5-7 12:00</string>

    <string name="male">男</string>
    <string name="female">女</string>

    <string name="details">详细资料</string>
    <string name="my_activity">我的活动</string>
    <string name="about">关于</string>
    <string name="logout">注销</string>

    <string name="app_code">微阳    1.0</string>
    <string name="app_introduce">功能介绍</string>
    <string name="about_author">关于作者</string>
    <string name="app_update">版本更新</string>
    <string name="text1">研发中心 版权所有</string>
    <string name="text2">CopyRight @ 2018 All Rights Reserved</string>
</resources>
