<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="380dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/loginTitle"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ll_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/et_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_background"
                    android:hint="@string/input_username"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/less_green"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_background"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/less_green"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/forgetPassword"
                android:textColor="@color/trans" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_login"
                android:enabled="false"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_newAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/newsAccount"
                android:textColor="@color/trans"
                android:textSize="15sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>