<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e0ececec"
        android:orientation="vertical">

        <com.jude.rollviewpager.RollPagerView
            android:id="@+id/roll_view_pager"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:rollviewpager_play_delay="3000" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardMaxElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#f9f9f9"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/item_activity_main_fragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/fragment_main_type_icon_size"
                        android:layout_height="37dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon_jiangzuo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/fragment_main_type_magintop"
                        android:text="@string/jiangzuo"
                        android:textSize="@dimen/fragment_main_item_type_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_speech_main_fragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/fragment_main_type_icon_size"
                        android:layout_height="@dimen/fragment_main_type_icon_size"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon_yanchu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/fragment_main_type_magintop"
                        android:text="@string/yanchu"
                        android:textSize="@dimen/fragment_main_item_type_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_competition_main_fragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/fragment_main_type_icon_size"
                        android:layout_height="@dimen/fragment_main_type_icon_size"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon_bisai" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/fragment_main_type_magintop"
                        android:text="@string/bisai"
                        android:textSize="@dimen/fragment_main_item_type_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_club_main_fragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/fragment_main_type_icon_size"
                        android:layout_height="@dimen/fragment_main_type_icon_size"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon_shetuan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/fragment_main_type_magintop"
                        android:text="@string/shetuan"
                        android:textSize="@dimen/fragment_main_item_type_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_college_main_fragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/fragment_main_type_icon_size"
                        android:layout_height="@dimen/fragment_main_type_icon_size"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon_xueshenghui" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/fragment_main_type_magintop"
                        android:text="@string/xueshenghui"
                        android:textSize="@dimen/fragment_main_item_type_text" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#bebebe" />

    </LinearLayout>

</LinearLayout>


